kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: index-fund-comparison

spec:
  replicas: 1

  selector:
    matchLabels:
      app: index-fund-comparison

  template:
    metadata:
      labels:
        app: index-fund-comparison

    spec:
      containers:
        - name: index-fund-comparison
          image: ghcr.io/nicwortel/indexfondsenvergelijken.nl:latest
      imagePullSecrets:
        - name: docker-container-registry
