kubernetes/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  namespace: indexfondsenvergelijken
  name: indexfondsenvergelijken

spec:
  selector:
    app: indexfondsenvergelijken
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
