kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: index-fund-comparison
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"

spec:
  tls:
    - hosts:
        - indexfondsenvergelijken.nl
        - www.indexfondsenvergelijken.nl
      secretName: indexfondsenvergelijken.nl
  rules:
    - host: www.indexfondsenvergelijken.nl
      http:
        paths:
          - backend:
              serviceName: index-fund-comparison
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: indexfondsenvergelijker.nl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.indexfondsenvergelijken.nl

spec:
  tls:
    - hosts:
        - indexfondsenvergelijker.nl
        - www.indexfondsenvergelijker.nl
      secretName: indexfondsenvergelijker.nl
  rules:
    - host: www.indexfondsenvergelijker.nl
      http:
        paths:
            - backend:
                serviceName: index-fund-comparison
                servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: indexfondsen-vergelijken.nl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.indexfondsenvergelijken.nl

spec:
  tls:
    - hosts:
        - indexfondsen-vergelijken.nl
        - www.indexfondsen-vergelijken.nl
      secretName: indexfondsen-vergelijken.nl
  rules:
    - host: www.indexfondsen-vergelijken.nl
      http:
        paths:
          - backend:
              serviceName: index-fund-comparison
              servicePort: 80
